samples/_failures_safe/1761345051_0485b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65b05019.c:122:1: error: expected ‘{’ at end of input
  122 | void print_vector(struct
      | ^~~~
